# AI_Agent

./: .gitignore  README.md
Creative_Story_Battle/: CreativeStoryBattle.ipynb
Deep_Research_Agent/: README.md  deep_researcher.ipynb
Deep_Research_Agent/advanced_research_tool/: deep_research_tool.py  deep_researcher.py  email_agent.py  planner_agent.py  research_agent.py  senior_research_agent.py
Foundation/Autogen/: Lab2_multimodal.ipynb  Lab3_StandaloneRuntime.ipynb  lab1_travelagent.ipynb
Foundation/Basics/: Lab1.ipynb  Lab2_compare_models.ipynb  Lab3_AlterEgo_ConversationalAI.ipynb  Lab4_Pushover.ipynb  README.md  appPushover.py
Foundation/CrewAI/coding_assistant/: README.md  (+1 more)
Foundation/CrewAI/stock_selector/: README.md  pyproject.toml
Foundation/CrewAI/stock_selector/output/: decision.md  research_report.json  trending_companies.json
Foundation/CrewAI/stock_selector/src/stock_selector/: crew.py  main.py
Foundation/CrewAI/stock_selector/src/stock_selector/config/: agents.yaml  tasks.yaml
Foundation/LangGraph/: Lab1.ipynb  Lab2-MemorySaver.ipynb  Lab3-sqlite3.ipynb  Lab4-playwright.ipynb
Foundation/OpenAI_SDK/: Lab1.ipynb  Lab2_function_tool.ipynb  Lab3_MultiAgent_handoffs.ipynb
Sales_Agent_Orchestrator/: 1_sales_agent_orchestrator.ipynb  2_sales_agent_orchestrator_with_tools.ipynb  3_sales_agent_orchestrator_with_guardrails.ipynb  sales_agent_orchestrator_with_tools.ipynb
fullstack_team/: README.md  pyproject.toml
fullstack_team/src/fullstack_team/: crew.py  main.py
fullstack_team/src/fullstack_team/config/: agents.yaml  tasks.yaml
(+20 files in other folders)
