[project]
name = "fullstack_team"
version = "0.1.0"
description = "fullstack_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
fullstack_team = "fullstack_team.main:run"
run_crew = "fullstack_team.main:run"
train = "fullstack_team.main:train"
replay = "fullstack_team.main:replay"
test = "fullstack_team.main:test"
run_with_trigger = "fullstack_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
