[project]
name = "stock_selector"
version = "0.1.0"
description = "stock_selector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1"
]

[project.scripts]
stock_selector = "stock_selector.main:run"
run_crew = "stock_selector.main:run"
train = "stock_selector.main:train"
replay = "stock_selector.main:replay"
test = "stock_selector.main:test"
run_with_trigger = "stock_selector.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
